[gd_scene load_steps=11 format=3 uid="uid://ccr6p41srpf4p"]

[ext_resource type="Script" path="res://Scenes/DefaultCamera.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cppyelh0uodop" path="res://Scenes/HUD.tscn" id="2"]
[ext_resource type="Script" path="res://Scenes/Creeps/WavePath.gd" id="3_abrkq"]
[ext_resource type="PackedScene" uid="uid://dg7n0ts1qsjbg" path="res://Scenes/Landscape.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://bah0cloqblp5n" path="res://Scenes/Creeps/WaveSpawner.tscn" id="5_pan23"]
[ext_resource type="Script" path="res://Scenes/GameScene.gd" id="9"]
[ext_resource type="Script" path="res://Scenes/Economy/GoldControl.gd" id="9_avlwg"]

[sub_resource type="Curve2D" id="1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 5610, 2975, 0, 0, 0, 0, 2825, 4367, 3.76354, -42.3398, -3.76354, 42.3398, 2766, 4428, 0, 0, 0, 0, 2816, 4499, 0, 0, 0, 0, 3626, 4904, -36.6945, -0.470442, 36.6945, 0.470442, 3711, 4922, 0, 0, 0, 0, 3788, 4909, 0, 0, 0, 0, 5288, 4152, -52.6896, -0.470442, 52.6896, 0.470442, 5376, 4131, 0, 0, 0, 0, 5456, 4152, 0, 0, 0, 0, 6370, 4609, 3.2931, -33.4014, -3.2931, 33.4014, 6415, 4662, 0, 0, 0, 0, 6368, 4709, 0, 0, 0, 0, 3846, 5965, 40.458, 0.470442, -40.458, -0.470442, 3779, 5978, 0, 0, 0, 0, 3707, 5968, 0, 0, 0, 0, 2258, 5242, 46.1034, 0.470442, -46.1034, -0.470442, 2176, 5221, 0, 0, 0, 0, 2095, 5241, 0, 0, 0, 0, 1232, 5674, 0, -26.3448, 0, 26.3448, 1194, 5712, 0, 0, 0, 0, 1230, 5755, 0, 0, 0, 0, 2611, 6444, 0.940885, -27.7561, -0.940885, 27.7561, 2644, 6482, 0, 0, 0, 0, 2609, 6522, 0, 0, 0, 0, 2400.13, 6607.54, 0, 0, 0, 0, -93, 7840)
}
point_count = 27

[sub_resource type="Curve2D" id="Curve2D_72x3r"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 5619, 2972, 0, 0, 0, 0, 4647, 3452, 0, 0, 0, 0, 4768, 5509, 0, 0, 0, 0, 1724, 5414, 0, 0, 0, 0, 2037, 6782, 0, 0, 0, 0, -95, 7837)
}
point_count = 6

[sub_resource type="GDScript" id="5"]
script/source = "extends CanvasLayer
"

[node name="GameScene" type="Node2D"]
script = ExtResource("9")

[node name="Map" parent="." instance=ExtResource("5")]
unique_name_in_owner = true

[node name="CreepPathGround" type="Path2D" parent="Map" groups=["wave_path"]]
z_index = 999
position = Vector2(-3261, -5248)
curve = SubResource("1")
script = ExtResource("3_abrkq")

[node name="CreepPathAir" type="Path2D" parent="Map" groups=["wave_path"]]
z_index = 999
position = Vector2(-3261, -5248)
curve = SubResource("Curve2D_72x3r")
script = ExtResource("3_abrkq")
is_air = true

[node name="ObjectYSort" type="Node2D" parent="Map"]
z_index = 10
y_sort_enabled = true

[node name="EffectsContainer" type="Node2D" parent="Map"]
z_index = 100

[node name="FloatingTextContainer" type="Node2D" parent="Map"]
z_index = 1000

[node name="CreepExit" type="Area2D" parent="Map"]
z_index = 999
position = Vector2(-3239, -5750)
scale = Vector2(0.845244, 0.890764)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Map/CreepExit"]
position = Vector2(-1993.51, 8648.76)
scale = Vector2(60.716, -28.6271)
polygon = PackedVector2Array(-0.44817, -27.7647, 25.8964, -1.41174, 52.241, -27.7647, 25.8964, -54.1176)

[node name="Camera2D" type="Camera2D" parent="Map"]
unique_name_in_owner = true
z_index = 1000
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(0.31481, 0.5)
zoom = Vector2(0.6, 0.6)
limit_smoothed = true
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("1")

[node name="WaveSpawner" parent="Map" instance=ExtResource("5_pan23")]

[node name="UI" type="CanvasLayer" parent="."]
script = SubResource("5")

[node name="HUD" parent="UI" instance=ExtResource("2")]
unique_name_in_owner = true
size_flags_horizontal = 1
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="GoldControl" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_avlwg")

[connection signal="body_entered" from="Map/CreepExit" to="." method="_on_CreepExit_body_entered"]
[connection signal="wave_ended" from="Map/WaveSpawner" to="." method="_on_WaveSpawner_wave_ended"]
